fixing sum